--- a/2024/20241108.md
+++ b/2024/20241108.md
@@ -3,7 +3,9 @@
 ## Xcode
 
 Predictive Code Completion Model ていう機能があるらしい
+
 Copilit のように候補が出てくる
+
 けど、制度は微妙らしいので、Copilot for Xcode 使ったほうが良いらしい
 
 ## GitHub
@@ -12,13 +14,9 @@ Copilit のように候補が出てくる
 
 #### actions/cache
 
-Branch A から Branch B を作成し、
-Branch B でキャッシュを作成しても、
-Branch A でそのキャッシュは利用できない
+Branch A から Branch B を作成し、Branch B でキャッシュを作成しても、Branch A でそのキャッシュは利用できない
 
-Branch A から Branch B を作成し、
-Branch A でキャッシュを作成すると、
-Branch B でそのキャッシュを利用できる
+Branch A から Branch B を作成し、Branch A でキャッシュを作成すると、Branch B でそのキャッシュを利用できる
 
 ので、キャッシュの作成は上流側で行ったほうが意外と便利
 
@@ -26,9 +24,7 @@ Branch B でそのキャッシュを利用できる
 
 actions/cache には restore と save がそれぞれある
 
-実際に触っていないのでわからないが、おそらく
-actions/cache では存在したら restore、存在しなかったら save が行われるが、
-restore//save を利用することで、よりきめ細やかな設定ができるようになる
+actions/cache では存在したら restore、存在しなかったら save が行われるが、restore//save を利用することで、よりきめ細やかな設定ができるようになる
 
 ## Other
 
@@ -39,16 +35,21 @@ restore//save を利用することで、よりきめ細やかな設定ができ
 twada さんの投稿の概念はとても大事だと思った
 
 > コードには How
+>
 > テストコードには What
+>
 > コミットログには Why
+>
 > コードコメントには Why not
 > 
 > を書こうという話をした
+>
 > https://x.com/t_wada/status/904916106153828352
 
 ### 正規表現
 
 「^」を使うと、**行の先頭**に指定の文字列が含まれていればマッチする  
+
 「\A」を使うと、**文字列の先頭**に指定の文字列が含まれていればマッチする
 
 [# 正規表現 - 「\A」・「\z」と「^」・「$」の違いを知りたい - Qiita](https://qiita.com/itsumoonazicode/items/e3c7886909ce68986c9a)
